--- a/src/basics/basic.html
+++ b/src/basics/basic.html
@@ -1,10 +1,14 @@
 <html>
 
     <head>
-        <script src="./oopsconcepts.js"></script>
+        <!-- <script src="./oopsconcepts.js"></script> -->
+        <!-- <script src="./inheritance.js"></script> -->
+        <!-- <script src="./array.js"></script> -->
+        <script src="./throttle.js"></script>
+        <!-- <script src="./interview.js"></script> -->
     </head>
     <body>
-
+        <div id="main"></div>
     </body>
 
 </html>
